feat: enhance delete functionality in AnuncioService; add authorization checks and refactor error handling